force-app/main/default/objects/AOB_OnboardingSetting__mdt/AOB_OnboardingSetting__mdt.object-meta.xml
<CustomObject>
    <description>SFP-8698 custom metadata type used to specify how the users should be created based on the originating website ( country)</description>
    <label>AOB Onboarding Setting</label>
    <pluralLabel>Onboarding Settings</pluralLabel>
</CustomObject>