force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AOB_AccountOwner__c</fullName>
    <label>Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>