force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AOB_AccountRecordType__c</fullName>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>