force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_accountsUrl__c.field-meta.xml
<CustomField>
    <fullName>AOB_accountsUrl__c</fullName>
    <inlineHelpText>similar to https://www.standardbank.co.za/commerce/business/accounts</inlineHelpText>
    <label>Commerce Accounts Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>