force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_AppStatus__c.field-meta.xml
<CustomField>
    <fullName>AOB_AppStatus__c</fullName>
    <description>SFP-8988  Indicates the initial status to attribute to an application freshly created by commerce</description>
    <label>Application status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>