force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_ContactOwnerId__c.field-meta.xml
<CustomField>
    <fullName>AOB_ContactOwnerId__c</fullName>
    <label>Contact Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>