force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_ContactRecordType__c.field-meta.xml
<CustomField>
    <fullName>AOB_ContactRecordType__c</fullName>
    <label>Contact Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>