force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_Country__c.field-meta.xml
<CustomField>
    <fullName>AOB_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>