force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>AOB_CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZA</fullName>
                <default>true</default>
                <label>ZA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>