force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_Currency__c.field-meta.xml
<CustomField>
    <fullName>AOB_Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <default>true</default>
                <label>R</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>