force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_emailEncodingKey__c.field-meta.xml
<CustomField>
    <fullName>AOB_emailEncodingKey__c</fullName>
    <label>emailEncodingKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>