force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_Language__c.field-meta.xml
<CustomField>
    <fullName>AOB_Language__c</fullName>
    <label>Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>