force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_Locale__c.field-meta.xml
<CustomField>
    <fullName>AOB_Locale__c</fullName>
    <description>Locale of the user to be onboarded</description>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>