force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>AOB_PermissionSet__c</fullName>
    <label>Permission set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>