force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_Profile__c.field-meta.xml
<CustomField>
    <fullName>AOB_Profile__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>