force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_SandboxSuffix__c.field-meta.xml
<CustomField>
    <fullName>AOB_SandboxSuffix__c</fullName>
    <label>Sandbox Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>