force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_SiteId__c.field-meta.xml
<CustomField>
    <fullName>AOB_SiteId__c</fullName>
    <description>Commerce Site Id ( shows from where the customer is originating)</description>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>