force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_SystemId__c.field-meta.xml
<CustomField>
    <fullName>AOB_SystemId__c</fullName>
    <label>System Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>