force-app/main/default/objects/AOB_OnboardingSetting__mdt/fields/AOB_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>AOB_TimeZone__c</fullName>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>